# Wind

./: Dockerfile  Dockerfile_V1  Dockerfile_V2  Jenkinsfile  README.md  Script_V1_python.py  forms.py  frontend.py  pyproject.toml  weathercode_dictionary.py
.github/workflows/: Wind_V1_build.yml
src/: Dockerfile  Script_V1_python.py  weathercode_dictionary.py
templates/: home.html
